--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.6.1",
+    "background-video": "^2.0.1",
     "bootstrap": "^3.3.7",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
